Import of GWILLIAMS/IRI-0.002 from CPAN.
gitpan-cpan-distribution: IRI
gitpan-cpan-version:      0.002
gitpan-cpan-path:         GWILLIAMS/IRI-0.002.tar.gz
gitpan-cpan-author:       GWILLIAMS
gitpan-cpan-maturity:     released

--- a/README
+++ b/README
@@ -9,7 +9,7 @@ SYNOPSIS
    my $i	= IRI->new(value => '#frag', base => $base);
    say $i->scheme; # 'http'
    say $i->path; # '/'
-   say $i->abs; # 'http://www.hestebedgård.dk/#frag'
+   say $i->as_string; # 'http://www.hestebedgård.dk/#frag'
 
 INSTALLATION
 
